--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title> My first github report</title>
 </head>
 <body>
+    <h1>Inzamam is a web developer.</h1>
+    <h2> Asha is a student.</h2>
     
 </body>
 </html>
