--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> My first github report</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Inzamam is a web developer.</h1>
     <h2> Asha is a student.</h2>
-    
+    <p> Inzamam is my husband.</p>
+     
 </body>
 </html>
