--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Inzamam is a web developer.</h1>
     <h2> Asha is a student.</h2>
     <p> Inzamam is my husband.</p>
+    <p> Inzamam is my husband.</p>
      
 </body>
 </html>
