--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Inzamam is a web developer.</h1>
+    <h1>Inzamam is a web developer and programmer</h1>
     <h2> Asha is a student.</h2>
     <p> Inzamam is my husband.</p>
     <p> Inzamam is my husband.</p>
+    <img src="OIP.jpg"> 
      
 </body>
 </html>
